@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 
 - Better command line feedback
+- Debug/verbose options on command line
 
 ## 1.5.0
 
